--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -10,15 +10,16 @@ readme = "README.md"
 requires-python = ">=3.12"
 authors = [{ name = "Karsten Held" }]
 dependencies = [
-  "fastapi>=0.115",
-  "uvicorn[standard]>=0.30",
+  "fastapi==0.116.1",
+  "uvicorn[standard]==0.35.0",
   "cryptography==43.0.3",
-  "azure-identity",
-  "requests",
-  "python-dotenv",
-  "openai",
-  "azure-keyvault-secrets",
-  "aiohttp",
+  "azure-identity==1.24.0",
+  "requests==2.32.5",
+  "python-dotenv==1.1.1",
+  "openai==1.101.0",
+  "azure-keyvault-secrets==4.10.0",
+  "aiohttp==3.12.15",
+  "python-multipart==0.0.20",
 ]
 
 [project.optional-dependencies]
