--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
       "justMyCode": true,
       "serverReadyAction": {
         "pattern": "Uvicorn running on (http://\\S+)",
-        "uriFormat": "%s/docs",
+        "uriFormat": "%s/",
         "action": "openExternally"
       }
     }
