--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -12,14 +12,12 @@ authors = [{ name = "Karsten Held" }]
 dependencies = [
   "fastapi==0.116.1",
   "uvicorn[standard]==0.35.0",
-  "cryptography==43.0.3",
   "azure-identity==1.24.0",
-  "requests==2.32.5",
   "python-dotenv==1.1.1",
   "openai==1.101.0",
-  "azure-keyvault-secrets==4.10.0",
-  "aiohttp==3.12.15",
   "python-multipart==0.0.20",
+  "httpx==0.28.1",
+  "psutil>=5.9.0",
 ]
 
 [project.optional-dependencies]
