--- a/.gitignore
+++ b/.gitignore
@@ -20,5 +20,9 @@ __pycache__/*
 # Deployment artifact
 deploy.zip
 
-# This folder contains files that are deployed using ZIP deployment to Azure and then copied to the persistant storage after deployment
-src/.copy_to_persistant_storage/
+# These folders contain zip files that are deployed using ZIP deployment to Azure and then unzipped to the persistant storage after deployment
+# Track the folders but ignore their contents
+src/.unzip_to_persistant_storage_if_newer/*
+src/.unzip_to_persistant_storage_overwrite/*
+!src/.unzip_to_persistant_storage_if_newer/.gitkeep
+!src/.unzip_to_persistant_storage_overwrite/.gitkeep
