--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -12,11 +12,13 @@ authors = [{ name = "Karsten Held" }]
 dependencies = [
   "fastapi==0.116.1",
   "uvicorn[standard]==0.35.0",
-  "azure-identity==1.24.0",
+  "azure-identity==1.15.0",
+  "cryptography==41.0.7",
   "python-dotenv==1.1.1",
   "openai==1.101.0",
   "python-multipart==0.0.20",
   "httpx==0.28.1",
+  "aiohttp==3.12.15",
 ]
 
 [project.optional-dependencies]
