--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
   "fastapi==0.116.1",
   "uvicorn[standard]==0.35.0",
   "azure-identity==1.15.0",
+  "Office365-REST-Python-Client==2.6.2",
   "cryptography==41.0.7",
   "python-dotenv==1.1.1",
   "openai==1.101.0",
