--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
   "python-multipart==0.0.20",
   "httpx==0.28.1",
   "aiohttp==3.12.15",
+  "msgraph-sdk>=1.0.0",
 ]
 
 [project.optional-dependencies]
